--- a/htmls/usuarios/nav-bar.html
+++ b/htmls/usuarios/nav-bar.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SISTEMA CHASM</title>
+    <title>Usuarios</title>
 
     <!-- Custom fonts for this template-->
     <link href="htmls/admin/resources/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -64,7 +64,7 @@
         <!-- Nav Item - Pages Collapse Menu -->
         <li class="nav-item">
 
-            <a class="nav-link" href="usuarios.php">
+            <a class="nav-link" href="clases.php">
                 <i class="fas fa-fw fa-cubes"></i>
                 <span>clases</span></a>
         </li>
