--- a/htmls/categorias/nav-bar.html
+++ b/htmls/categorias/nav-bar.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Productos</title>
+    <title>Categoria</title>
 
     <!-- Custom fonts for this template-->
     <link href="htmls/admin/resources/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -222,8 +222,9 @@
             <!-- End of Topbar -->
 
             <!-- Begin Page Content --------------------------------------------------------------->
+
             <div class="container-fluid">
-                <?php include('admin.html')?>
+                <?php include('categoria.html')?>
             </div>
             <!-- /.container-fluid ---------------------------------------------------------------->
 
