--- a/htmls/header.html
+++ b/htmls/header.html
@@ -70,7 +70,7 @@
                                 <a href="tienda.php?pagina=1"class ="font_header"><p>Tienda</p></a>
                             </div>
                             <div class="col-sm-2">
-                                <a href="http://blog.chasm.com.mx"class ="font_header"><p>Blog</p></a>
+                                <a href="https://mochilaschasm.com/blog"class ="font_header"><p>Blog</p></a>
                             </div>
                             <div class="col-sm-2">
                                 <a href="index.php#eventos"class ="font_header"><p>Eventos</p></a>
