--- a/htmls/categorias/categoria.html
+++ b/htmls/categorias/categoria.html
@@ -52,6 +52,30 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel2">Agregar SubClase</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="post" action="functional/_agregar_suclase.php">
+                    <div class="form-group">
+                        <input type="text" class="form-control" style="width: 15em;text-align: left"
+                               id="nombresc" name ="nombresc"aria-describedby="nombre" placeholder="Nombre">
+                    </div>
+                    <button class="btn btn-danger" type="button" >Cancelar</button>
+                    <button class="btn btn-primary" type="submit" name="submit">Registrar</button>
+                    <br><br>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
