--- a/htmls/tienda/tienda.html
+++ b/htmls/tienda/tienda.html
@@ -19,9 +19,9 @@
             <div class="row">
                 <div class="col-sm-12 listas_tienda">
                     <p class="boton_tienda"><a href="" class ="listas_tienda_link">Mochilas</a></p>
-                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Bolsas para Dados</p>
-                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Charolas Torres</p>
-                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Fundas para Tapetesilas</p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Bolsas para Dados</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Charolas Torres</a></p>
+                    <p class ="boton_tienda"><a href="" class ="listas_tienda_link">Fundas para Tapetesilas</a></p>
 
                 </div>
             </div>
@@ -113,17 +113,6 @@
         </div>
 <!---------------__Fin de categorias------------------>
         <div class ="col-sm-9">
-            <div class ="row">
-                <div class ="col-sm-12 margin_numeros">
-                    <nav aria-label="Page navigation example" class ="-align-right">
-                        <ul class="pagination">
-                            <li class="page-item"><a class="page-link" href="tienda.php?pagina=1" >1</a></li>
-                            <li class="page-item"><a class="page-link" href="tienda.php?pagina=2" >2</a></li>
-                            <li class="page-item"><a class="page-link" href="tienda.php?pagina=3" >3</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
             <br><br>
             <div class ="row">
                 <?php include('_mostrar_cards.php') ?>
